--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ZeChat</string>
+    <string name="app_name">AppsWhat</string>
     <string name="sign_out">Sign Out</string>
     <string name="send_button_label">Send</string>
 </resources>
